nowrap fix

--- a/themes/exchanges/scss/app.scss
+++ b/themes/exchanges/scss/app.scss
@@ -24,6 +24,10 @@
 	font-variant: small-caps;
 }
 
+.text-nowrap {
+	white-space: nowrap;
+}
+
 h1 {
 	font-weight: bold;
 	margin-bottom: 1rem;
